[package]
name = "whoiam"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.55.1"
aws-sdk-account = "0.26.0"
aws-sdk-iam = "0.26.0"
aws-sdk-sts = "0.26.0"
aws-smithy-http = "0.55.1"
clap = { version = "4.2.4", features = ["derive", "cargo"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1", features = ["full"] }


